# Scaffold

./: .gitignore  .gitmodules  .polyscope.ini  LICENSE  MUJOCO_LOG.TXT  README.md  file.xml  filename.xml  imgui.ini  pyproject.toml  setup.py
data/input/: box1x1.json  box2x2.json  box2x2_noclamp.json  box3x3.json  box4x4.json  bridge.json  bunny.json  cshape.json  frustum.json  one_tet.json  roboarch.json  scaffold.json  test.xml  tower.json  twoboxes.json
data/mt/: box1x1_layer_0.json  box1x1_log.json  box1x1_peng.json  box2x2_layer_0.json  box2x2_log.json  box2x2_noclamp_layer_0.json  box2x2_noclamp_log.json  box2x2_peng.json  box3x3_layer_0.json  box3x3_log.json  box4x4_log.json  box_MT_layer_0.json  box_MT_layer_0_contact.json  box_MT_layer_1.json  box_MT_layer_1_contact.json  box_MT_layer_2_contact.json  bridge_layer_0.json  bridge_log.json  bunny_layer_0.json  bunny_log.json  cshape_layer_0.json  cshape_log.json  frustum_layer_0.json  frustum_log.json  one_tet_MT_layer_0.json  one_tet_layer_0.json  one_tet_log.json  robarch_peng.json  roboarch_layer_0.json  roboarch_log.json  scaffold_layer_0.json  scaffold_log.json  (+4 more)
plots/: log_summary_table.tex  runtime_latex_table.py  runtime_plot.py  tr_evolution.py
rhino/: TRIANGLE.3dmbak  eleni_workshop.gh  file_parser.gh  interactive_ui.gh  io.gh  load_model.py  mqtt.gh  parser.gh  quick_file_viz.gh  reciprocal.gh  run_script.py  test_example.3dm  test_example.3dm.rhl  test_example.3dmbak  xue.gh
script/: .polyscope.ini  MUJOCO_LOG.TXT  compare_songv2.py  imgui.ini  opt_from_file.py  optimize.py  visualization.py
(+26 files in other folders)
